# photoView

./: .clang-format  .gitignore  CMakeLists.txt  README.md  default.nix  dev.tcsavage.PhotoLuts.yml  shell.nix
app/: CMakeLists.txt  resources.qrc
app/src/: CompositionManager.cpp  CompositionManager.hpp  HaldImageDialog.cpp  ImageView.cpp  ImageView.hpp  MainWindow.cpp  MainWindow.hpp  OpenFileState.cpp  OpenFileState.hpp  PhotoWindow.cpp  PhotoWindow.hpp  ProcessingIndicator.cpp  Processor.cpp  Processor.hpp  ProcessorController.cpp  ProcessorController.hpp  ProcessorWorker.cpp  ProcessorWorker.hpp  main.cpp
app/src/app/: OpenFileState.cpp  PhotoWindow.cpp  PhotoWindow.hpp  main.cpp
app/src/app/canvas/: Canvas.cpp  Canvas.hpp  CanvasControl.cpp  CanvasControl.hpp  CanvasItems.cpp  CanvasItems.hpp  CanvasScene.cpp  CanvasScene.hpp  CanvasView.cpp  CanvasView.hpp  LinearGradientControl.cpp  LinearGradientControl.hpp  MaskOverlayControl.cpp  MaskOverlayControl.hpp
app/src/app/composition/: CompositionManager.cpp  CompositionManager.hpp  CompositionModel.cpp  CompositionModel.hpp  CompositionOutline.cpp  CompositionOutline.hpp
app/src/app/dialogs/: HaldImageDialog.cpp  HaldImageDialog.hpp
app/src/app/filters/: FilterDialog.cpp  FilterDialog.hpp  FilterManager.cpp  FilterManager.hpp  FilterWidget.cpp  FilterWidget.hpp  Filters.hpp
app/src/app/masks/: MaskGenerators.hpp  MaskManager.cpp  MaskManager.hpp
app/src/app/widgets/: FileChooser.cpp  FileChooser.hpp  FloatSlider.cpp  FloatSlider.hpp  Histogram.cpp  Histogram.hpp  ImageView.cpp  ImageView.hpp  ProcessingIndicator.cpp  ProcessingIndicator.hpp  Slider.cpp  Slider.hpp
app/src/composition/: CompositionManager.cpp  CompositionManager.hpp  CompositionModel.cpp  CompositionModel.hpp  CompositionOutline.cpp  CompositionOutline.hpp
app/src/filters/: FilterDialog.cpp  FilterDialog.hpp  FilterManager.cpp  FilterManager.hpp  FilterWidget.cpp  FilterWidget.hpp  LookFilters.cpp  LookFilters.hpp  LookFiltersModel.cpp  LookFiltersModel.hpp
app/src/widgets/: FileChooser.cpp
libs/image/: CMakeLists.txt
libs/image/benchmarks/: CMakeLists.txt
libs/image/benchmarks/generate_linear_gradient_mask/: CMakeLists.txt  main.cpp
libs/image/cmake/: FindOpenImageIO.cmake
libs/image/examples/: CMakeLists.txt
libs/image/examples/apply_lut/: CMakeLists.txt  main.cpp
libs/image/examples/buffers/: CMakeLists.txt  main.cpp
libs/image/examples/data_api/: CMakeLists.txt  main.cpp
libs/image/examples/filter_stack/: CMakeLists.txt  main.cpp
libs/image/examples/opencl/: CMakeLists.txt  copyKernel.cl  main.cpp
libs/image/libimage/: CMakeLists.txt
libs/image/libimage/include/image/: AllFilters.hpp  AllMaskGenerators.hpp  Assert.hpp  Color.hpp  Composition.hpp  CompositionIO.hpp  CompositionSerialization.hpp  CoreTypes.hpp  Exception.hpp  Expected.hpp  Filters.hpp  Forward.hpp  Histogram.hpp  IO.hpp  ImageBuf.hpp  ImageIOOptions.hpp  ImageProcessor.hpp  ImageSpec.hpp  Look.hpp  Mask.hpp  MaskProcessor.hpp  NDArray.hpp  PolyVal.hpp  Pool.hpp  Precalculator.hpp  Processor.hpp  Registry.hpp  Resource.hpp  Serialization.hpp  SmallVector.hpp  Stopwatch.hpp  Type.hpp  TypeName.hpp  Util.hpp
libs/image/libimage/include/image/data/: API.hpp  Core.hpp  Declare.hpp  FilterTypes.hpp  Interface.hpp  PrimitiveTypes.hpp  Ref.hpp  ToString.hpp
libs/image/libimage/include/image/filters/: Concepts.hpp  Exposure.hpp  Filter.hpp  FilterStack.hpp  Lut.hpp
libs/image/libimage/include/image/luts/: Barycentric.hpp  CubeFile.hpp  FastInterpolator.hpp  Hald.hpp  LUT.hpp  Lattice3D.hpp  Lut.hpp  SimpleCube.hpp  StrengthModifier.hpp  TetrahedralInterpolator.hpp
libs/image/libimage/include/image/memory/: Allocator.hpp  Buffer.hpp
libs/image/libimage/include/image/opencl/: BufferDevice.hpp  Context.hpp  Handle.hpp  Manager.hpp  Program.hpp  Types.hpp
libs/image/libimage/kernels/: apply3DLut_F32_U8.cl  kernels.cl  maskKernels.cl  processors.ocl
libs/image/libimage/src/image/: Assert.cpp  Composition.cpp  CompositionIO.cpp  CompositionSerialization.cpp  Exception.cpp  Filters.cpp  FiltersSerialization.cpp  ImageProcessor.cpp  Look.cpp  Mask.cpp  MaskProcessor.cpp  Processor.cpp  Resource.cpp  Serialization.hpp  Stopwatch.cpp  Type.cpp
libs/image/libimage/src/image/luts/: Barycentric.cpp  CubeFile.cpp  LUT.cpp  Lattice3D.cpp  Lut.cpp  SimpleCube.cpp  TetrahedralInterpolator.cpp
libs/image/libimage/src/image/memory/: Allocator.cpp  Buffer.cpp
libs/image/libimage/src/image/opencl/: BufferDevice.cpp  Context.cpp  Manager.cpp  Program.cpp
libs/image/libimage/src/image/serialization/: CompositionSerialization.cpp  DataAPIInterface.cpp  DataAPIInterface.hpp  FiltersSerialization.cpp  FiltersSerialization.hpp  MaskGeneratorSerialization.cpp  MaskGeneratorSerialization.hpp  Serialization.cpp  Serialization.hpp
nix/: openimageio2.nix
packaging/flatpak/: dev.tcsavage.PhotoLuts.yml  dev.tcsavage.PhotoView.yml  dev.tomsavage.PhotoView.yml
packaging/xdg/: dev.tcsavage.PhotoLuts.desktop  dev.tcsavage.PhotoView.desktop  dev.tomsavage.PhotoView.desktop
v2_test/: CMakeLists.txt
v2_test/src/app/: Algebra.hpp  DataAPI.hpp  Forward.hpp  MainWindow.cpp  MainWindow.hpp  Model.hpp  NodeTree.cpp  NodeTree.hpp  NodeTreeModel.cpp  NodeTreeModel.hpp  Operations.cpp  Operations.hpp  ProgramModel.cpp  ProgramModel.hpp  QtSupport.cpp  QtSupport.hpp  Registry.hpp  Updates.hpp  main.cpp
